crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@212.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,5), numrange(6,10)) <@ numrange(1,9);"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    AExpr@7..67
      FuncCall@7..49
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "5"
        Ascii41@33..34 ")"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        FuncCall@36..49
          Ident@36..44 "numrange"
          Ascii40@44..45 "("
          AConst@45..46
            Iconst@45..46 "6"
          Ascii44@46..47 ","
          AConst@47..49
            Iconst@47..49 "10"
      Ascii41@49..50 ")"
      Ascii41@50..51 ")"
      Whitespace@51..52 " "
      Op@52..54 "<@"
      Whitespace@54..55 " "
      FuncCall@55..67
        Ident@55..63 "numrange"
        Ascii40@63..64 "("
        AConst@64..65
          Iconst@64..65 "1"
        Ascii44@65..66 ","
        AConst@66..67
          Iconst@66..67 "9"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

