crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@213.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,5)}'::nummultirange <@ '{[1,9)}';"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    AExpr@7..44
      TypeCast@7..31
        AConst@7..16
          Sconst@7..16 "'{[1,5)}'"
        Typecast@16..18 "::"
        TypeName@18..31
          Ident@18..31 "nummultirange"
      Whitespace@31..32 " "
      Op@32..34 "<@"
      Whitespace@34..35 " "
      AConst@35..44
        Sconst@35..44 "'{[1,9)}'"
  Ascii59@44..45 ";"

