crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@214.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[-4,-2), [1,5)}'::nummultirange <@ '{[1,9)}';"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    AExpr@7..53
      TypeCast@7..40
        AConst@7..25
          Sconst@7..25 "'{[-4,-2), [1,5)}'"
        Typecast@25..27 "::"
        TypeName@27..40
          Ident@27..40 "nummultirange"
      Whitespace@40..41 " "
      Op@41..43 "<@"
      Whitespace@43..44 " "
      AConst@44..53
        Sconst@44..53 "'{[1,9)}'"
  Ascii59@53..54 ";"

