crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,5), [6,10)}'::nummultirange <@ '{[1,9)}';"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      TypeCast@7..39
        AConst@7..24
          Sconst@7..24 "'{[1,5), [6,10)}'"
        Typecast@24..26 "::"
        TypeName@26..39
          Ident@26..39 "nummultirange"
      Whitespace@39..40 " "
      Op@40..42 "<@"
      Whitespace@42..43 " "
      AConst@43..52
        Sconst@43..52 "'{[1,9)}'"
  Ascii59@52..53 ";"

