crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@219.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'empty'::numrange &< nummultirange(numrange(1,2));"
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..54
    AExpr@7..54
      TypeCast@7..24
        AConst@7..14
          Sconst@7..14 "'empty'"
        Typecast@14..16 "::"
        TypeName@16..24
          Ident@16..24 "numrange"
      Whitespace@24..25 " "
      Op@25..27 "&<"
      Whitespace@27..28 " "
      FuncCall@28..54
        Ident@28..41 "nummultirange"
        Ascii40@41..42 "("
        FuncCall@42..54
          Ident@42..50 "numrange"
          Ascii40@50..51 "("
          AConst@51..52
            Iconst@51..52 "1"
          Ascii44@52..53 ","
          AConst@53..54
            Iconst@53..54 "2"
  Ascii41@54..55 ")"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

