crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@220.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange() &< 'empty'::numrange;"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..43
    AExpr@7..43
      FuncCall@7..20
        Ident@7..20 "nummultirange"
      Ascii40@20..21 "("
      Ascii41@21..22 ")"
      Whitespace@22..23 " "
      Op@23..25 "&<"
      Whitespace@25..26 " "
      TypeCast@26..43
        AConst@26..33
          Sconst@26..33 "'empty'"
        Typecast@33..35 "::"
        TypeName@35..43
          Ident@35..43 "numrange"
  Ascii59@43..44 ";"

